cleanup emails, read me and links

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors"     : [
         {
             "name"  : "Aaron Jorbin",
-            "email" : "jorbin@clearspring.com"
+            "email" : "aaron@jorb.in"
         }
     ],
     "require" : {
